src/lib/grammar/.antlr/FortranParser.js
// Generated from /home/leandro/Desktop/vscode-fortran-support/src/lib/grammar/Fortran.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "Fortran.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "'['", "']'", "'_'", "','", "':'", 
                     "'.'", "'#'", "'&'", "'*'", "'+'", "'-'", "'='", "'<'", 
                     "'>'", "'/'", "'\"'", "'''", "'%'", "';'", "'|'" ];

var symbolicNames = [ null, "LP", "RP", "LB", "RB", "UNDERSCORE", "COMMA", 
                      "COLON", "POINT", "POUND", "AND", "ASTERISK", "PLUS", 
                      "MINUS", "EQUAL", "LT", "GT", "SLASH", "DQUOTE", "SQUOTE", 
                      "PERCENT", "SEMICOLON", "PIPE", "CONTAINS", "ELEMENTAL", 
                      "END", "FUNCTION", "MODULE", "PURE", "PROGRAM", "RESULT", 
                      "RECURSIVE", "SUBROUTINE", "ID", "INT", "WHITESPACE", 
                      "COMMENT", "PREPROCESSOR", "SUBROUTINE_DECLARATION" ];

var ruleNames =  [ "file", "block", "program", "module", "modules", "arguments", 
                   "spec_part", "exec_part", "subp_part", "subroutine_declaration", 
                   "function_modifiers", "function_declaration", "subroutines", 
                   "functions" ];

function FortranParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

FortranParser.prototype = Object.create(antlr4.Parser.prototype);
FortranParser.prototype.constructor = FortranParser;

Object.defineProperty(FortranParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

FortranParser.EOF = antlr4.Token.EOF;
FortranParser.LP = 1;
FortranParser.RP = 2;
FortranParser.LB = 3;
FortranParser.RB = 4;
FortranParser.UNDERSCORE = 5;
FortranParser.COMMA = 6;
FortranParser.COLON = 7;
FortranParser.POINT = 8;
FortranParser.POUND = 9;
FortranParser.AND = 10;
FortranParser.ASTERISK = 11;
FortranParser.PLUS = 12;
FortranParser.MINUS = 13;
FortranParser.EQUAL = 14;
FortranParser.LT = 15;
FortranParser.GT = 16;
FortranParser.SLASH = 17;
FortranParser.DQUOTE = 18;
FortranParser.SQUOTE = 19;
FortranParser.PERCENT = 20;
FortranParser.SEMICOLON = 21;
FortranParser.PIPE = 22;
FortranParser.CONTAINS = 23;
FortranParser.ELEMENTAL = 24;
FortranParser.END = 25;
FortranParser.FUNCTION = 26;
FortranParser.MODULE = 27;
FortranParser.PURE = 28;
FortranParser.PROGRAM = 29;
FortranParser.RESULT = 30;
FortranParser.RECURSIVE = 31;
FortranParser.SUBROUTINE = 32;
FortranParser.ID = 33;
FortranParser.INT = 34;
FortranParser.WHITESPACE = 35;
FortranParser.COMMENT = 36;
FortranParser.PREPROCESSOR = 37;
FortranParser.SUBROUTINE_DECLARATION = 38;

FortranParser.RULE_file = 0;
FortranParser.RULE_block = 1;
FortranParser.RULE_program = 2;
FortranParser.RULE_module = 3;
FortranParser.RULE_modules = 4;
FortranParser.RULE_arguments = 5;
FortranParser.RULE_spec_part = 6;
FortranParser.RULE_exec_part = 7;
FortranParser.RULE_subp_part = 8;
FortranParser.RULE_subroutine_declaration = 9;
FortranParser.RULE_function_modifiers = 10;
FortranParser.RULE_function_declaration = 11;
FortranParser.RULE_subroutines = 12;
FortranParser.RULE_functions = 13;

function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.EOF = function() {
    return this.getToken(FortranParser.EOF, 0);
};

FileContext.prototype.program = function() {
    return this.getTypedRuleContext(ProgramContext,0);
};

FileContext.prototype.modules = function() {
    return this.getTypedRuleContext(ModulesContext,0);
};




FortranParser.FileContext = FileContext;

FortranParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, FortranParser.RULE_file);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 30;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case FortranParser.PROGRAM:
            this.state = 28;
            this.program();
            break;
        case FortranParser.MODULE:
            this.state = 29;
            this.modules();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 32;
        this.match(FortranParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;





FortranParser.BlockContext = BlockContext;

FortranParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, FortranParser.RULE_block);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 37;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 34;
                this.matchWildcard(); 
            }
            this.state = 39;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.PROGRAM = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.PROGRAM);
    } else {
        return this.getToken(FortranParser.PROGRAM, i);
    }
};


ProgramContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};


ProgramContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ProgramContext.prototype.END = function() {
    return this.getToken(FortranParser.END, 0);
};

ProgramContext.prototype.CONTAINS = function() {
    return this.getToken(FortranParser.CONTAINS, 0);
};

ProgramContext.prototype.subroutine_declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Subroutine_declarationContext);
    } else {
        return this.getTypedRuleContext(Subroutine_declarationContext,i);
    }
};

ProgramContext.prototype.function_declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Function_declarationContext);
    } else {
        return this.getTypedRuleContext(Function_declarationContext,i);
    }
};




FortranParser.ProgramContext = ProgramContext;

FortranParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, FortranParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 40;
        this.match(FortranParser.PROGRAM);
        this.state = 41;
        this.match(FortranParser.ID);
        this.state = 42;
        this.block();
        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FortranParser.CONTAINS) {
            this.state = 43;
            this.match(FortranParser.CONTAINS);
            this.state = 48;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(((((_la - 24)) & ~0x1f) == 0 && ((1 << (_la - 24)) & ((1 << (FortranParser.ELEMENTAL - 24)) | (1 << (FortranParser.FUNCTION - 24)) | (1 << (FortranParser.PURE - 24)) | (1 << (FortranParser.RECURSIVE - 24)) | (1 << (FortranParser.SUBROUTINE - 24)) | (1 << (FortranParser.ID - 24)))) !== 0)) {
                this.state = 46;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case FortranParser.SUBROUTINE:
                    this.state = 44;
                    this.subroutine_declaration();
                    break;
                case FortranParser.ELEMENTAL:
                case FortranParser.FUNCTION:
                case FortranParser.PURE:
                case FortranParser.RECURSIVE:
                case FortranParser.ID:
                    this.state = 45;
                    this.function_declaration();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 50;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }

        this.state = 53;
        this.match(FortranParser.END);
        this.state = 54;
        this.match(FortranParser.PROGRAM);
        this.state = 55;
        this.match(FortranParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ModuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_module;
    return this;
}

ModuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleContext.prototype.constructor = ModuleContext;

ModuleContext.prototype.MODULE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.MODULE);
    } else {
        return this.getToken(FortranParser.MODULE, i);
    }
};


ModuleContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};


ModuleContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ModuleContext.prototype.END = function() {
    return this.getToken(FortranParser.END, 0);
};

ModuleContext.prototype.CONTAINS = function() {
    return this.getToken(FortranParser.CONTAINS, 0);
};

ModuleContext.prototype.subroutine_declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Subroutine_declarationContext);
    } else {
        return this.getTypedRuleContext(Subroutine_declarationContext,i);
    }
};

ModuleContext.prototype.function_declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Function_declarationContext);
    } else {
        return this.getTypedRuleContext(Function_declarationContext,i);
    }
};




FortranParser.ModuleContext = ModuleContext;

FortranParser.prototype.module = function() {

    var localctx = new ModuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, FortranParser.RULE_module);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this.match(FortranParser.MODULE);
        this.state = 58;
        this.match(FortranParser.ID);
        this.state = 59;
        this.block();
        this.state = 68;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FortranParser.CONTAINS) {
            this.state = 60;
            this.match(FortranParser.CONTAINS);
            this.state = 65;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(((((_la - 24)) & ~0x1f) == 0 && ((1 << (_la - 24)) & ((1 << (FortranParser.ELEMENTAL - 24)) | (1 << (FortranParser.FUNCTION - 24)) | (1 << (FortranParser.PURE - 24)) | (1 << (FortranParser.RECURSIVE - 24)) | (1 << (FortranParser.SUBROUTINE - 24)) | (1 << (FortranParser.ID - 24)))) !== 0)) {
                this.state = 63;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case FortranParser.SUBROUTINE:
                    this.state = 61;
                    this.subroutine_declaration();
                    break;
                case FortranParser.ELEMENTAL:
                case FortranParser.FUNCTION:
                case FortranParser.PURE:
                case FortranParser.RECURSIVE:
                case FortranParser.ID:
                    this.state = 62;
                    this.function_declaration();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 67;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }

        this.state = 70;
        this.match(FortranParser.END);
        this.state = 71;
        this.match(FortranParser.MODULE);
        this.state = 72;
        this.match(FortranParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ModulesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_modules;
    return this;
}

ModulesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModulesContext.prototype.constructor = ModulesContext;

ModulesContext.prototype.module = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ModuleContext);
    } else {
        return this.getTypedRuleContext(ModuleContext,i);
    }
};




FortranParser.ModulesContext = ModulesContext;

FortranParser.prototype.modules = function() {

    var localctx = new ModulesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, FortranParser.RULE_modules);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 74;
            this.module();
            this.state = 77; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===FortranParser.MODULE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ArgumentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_arguments;
    return this;
}

ArgumentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgumentsContext.prototype.constructor = ArgumentsContext;

ArgumentsContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};


ArgumentsContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.COMMA);
    } else {
        return this.getToken(FortranParser.COMMA, i);
    }
};





FortranParser.ArgumentsContext = ArgumentsContext;

FortranParser.prototype.arguments = function() {

    var localctx = new ArgumentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, FortranParser.RULE_arguments);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        this.match(FortranParser.ID);
        this.state = 84;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===FortranParser.COMMA) {
            this.state = 80;
            this.match(FortranParser.COMMA);
            this.state = 81;
            this.match(FortranParser.ID);
            this.state = 86;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Spec_partContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_spec_part;
    return this;
}

Spec_partContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Spec_partContext.prototype.constructor = Spec_partContext;

Spec_partContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




FortranParser.Spec_partContext = Spec_partContext;

FortranParser.prototype.spec_part = function() {

    var localctx = new Spec_partContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, FortranParser.RULE_spec_part);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Exec_partContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_exec_part;
    return this;
}

Exec_partContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Exec_partContext.prototype.constructor = Exec_partContext;

Exec_partContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};




FortranParser.Exec_partContext = Exec_partContext;

FortranParser.prototype.exec_part = function() {

    var localctx = new Exec_partContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, FortranParser.RULE_exec_part);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Subp_partContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_subp_part;
    return this;
}

Subp_partContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Subp_partContext.prototype.constructor = Subp_partContext;

Subp_partContext.prototype.CONTAINS = function() {
    return this.getToken(FortranParser.CONTAINS, 0);
};

Subp_partContext.prototype.subroutine_declaration = function() {
    return this.getTypedRuleContext(Subroutine_declarationContext,0);
};

Subp_partContext.prototype.function_declaration = function() {
    return this.getTypedRuleContext(Function_declarationContext,0);
};




FortranParser.Subp_partContext = Subp_partContext;

FortranParser.prototype.subp_part = function() {

    var localctx = new Subp_partContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, FortranParser.RULE_subp_part);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FortranParser.CONTAINS) {
            this.state = 91;
            this.match(FortranParser.CONTAINS);
            this.state = 94;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case FortranParser.SUBROUTINE:
                this.state = 92;
                this.subroutine_declaration();
                break;
            case FortranParser.ELEMENTAL:
            case FortranParser.FUNCTION:
            case FortranParser.PURE:
            case FortranParser.RECURSIVE:
            case FortranParser.ID:
                this.state = 93;
                this.function_declaration();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Subroutine_declarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_subroutine_declaration;
    return this;
}

Subroutine_declarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Subroutine_declarationContext.prototype.constructor = Subroutine_declarationContext;

Subroutine_declarationContext.prototype.SUBROUTINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.SUBROUTINE);
    } else {
        return this.getToken(FortranParser.SUBROUTINE, i);
    }
};


Subroutine_declarationContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};


Subroutine_declarationContext.prototype.LP = function() {
    return this.getToken(FortranParser.LP, 0);
};

Subroutine_declarationContext.prototype.RP = function() {
    return this.getToken(FortranParser.RP, 0);
};

Subroutine_declarationContext.prototype.spec_part = function() {
    return this.getTypedRuleContext(Spec_partContext,0);
};

Subroutine_declarationContext.prototype.END = function() {
    return this.getToken(FortranParser.END, 0);
};

Subroutine_declarationContext.prototype.arguments = function() {
    return this.getTypedRuleContext(ArgumentsContext,0);
};




FortranParser.Subroutine_declarationContext = Subroutine_declarationContext;

FortranParser.prototype.subroutine_declaration = function() {

    var localctx = new Subroutine_declarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, FortranParser.RULE_subroutine_declaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this.match(FortranParser.SUBROUTINE);
        this.state = 99;
        this.match(FortranParser.ID);
        this.state = 100;
        this.match(FortranParser.LP);
        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===FortranParser.ID) {
            this.state = 101;
            this.arguments();
        }

        this.state = 104;
        this.match(FortranParser.RP);
        this.state = 105;
        this.spec_part();
        this.state = 106;
        this.match(FortranParser.END);
        this.state = 107;
        this.match(FortranParser.SUBROUTINE);
        this.state = 108;
        this.match(FortranParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Function_modifiersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_function_modifiers;
    return this;
}

Function_modifiersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Function_modifiersContext.prototype.constructor = Function_modifiersContext;

Function_modifiersContext.prototype.ELEMENTAL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ELEMENTAL);
    } else {
        return this.getToken(FortranParser.ELEMENTAL, i);
    }
};


Function_modifiersContext.prototype.PURE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.PURE);
    } else {
        return this.getToken(FortranParser.PURE, i);
    }
};


Function_modifiersContext.prototype.RECURSIVE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.RECURSIVE);
    } else {
        return this.getToken(FortranParser.RECURSIVE, i);
    }
};


Function_modifiersContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};





FortranParser.Function_modifiersContext = Function_modifiersContext;

FortranParser.prototype.function_modifiers = function() {

    var localctx = new Function_modifiersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, FortranParser.RULE_function_modifiers);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 24)) & ~0x1f) == 0 && ((1 << (_la - 24)) & ((1 << (FortranParser.ELEMENTAL - 24)) | (1 << (FortranParser.PURE - 24)) | (1 << (FortranParser.RECURSIVE - 24)) | (1 << (FortranParser.ID - 24)))) !== 0)) {
            this.state = 110;
            _la = this._input.LA(1);
            if(!(((((_la - 24)) & ~0x1f) == 0 && ((1 << (_la - 24)) & ((1 << (FortranParser.ELEMENTAL - 24)) | (1 << (FortranParser.PURE - 24)) | (1 << (FortranParser.RECURSIVE - 24)) | (1 << (FortranParser.ID - 24)))) !== 0))) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 115;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Function_declarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = FortranParser.RULE_function_declaration;
    return this;
}

Function_declarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Function_declarationContext.prototype.constructor = Function_declarationContext;

Function_declarationContext.prototype.function_modifiers = function() {
    return this.getTypedRuleContext(Function_modifiersContext,0);
};

Function_declarationContext.prototype.FUNCTION = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.FUNCTION);
    } else {
        return this.getToken(FortranParser.FUNCTION, i);
    }
};


Function_declarationContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.ID);
    } else {
        return this.getToken(FortranParser.ID, i);
    }
};


Function_declarationContext.prototype.LP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.LP);
    } else {
        return this.getToken(FortranParser.LP, i);
    }
};


Function_declarationContext.prototype.RP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(FortranParser.RP);
    } else {
        return this.getToken(FortranParser.RP, i);
    }
};

